# 3D-Music-Studio-Simulator

./: CMakeLists.txt  README.md
scripts/: build.sh  clean.sh  run.sh
src/: input_handler.cpp  input_handler.h  main.cpp  model_loader.h  renderer.cpp  renderer.h  simulation.cpp  window.cpp
src/utilities/: math_utils.cpp  model_loader.cpp  shaders.cpp
